# phonebook

./: .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
app/: events.py  main.py  settings.py
app/api/routes/: api.py  ping.py
app/db/: events.py
app/db/migrations/: env.py
