[tool.poetry]
name = "phonebook"
version = "0.1.0"
description = ""
authors = ["Yegor Kutuzov kutuzov-1313@yandex.ru"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.0"
mypy = "^0.961"
loguru = "^0.6.0"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
